tests/neg-custom-args/captures/sep-capt1.check
-- Error: tests/neg-custom-args/captures/sep-capt1.scala:15:51 ---------------------------------------------------------
15 |  val z3 = h[(() -> Cap) @retains[x.type]](() => x)(() => C())  // error
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |           Separation failure: Illegal access to {x} which is hidden by the previous definition
   |           of value z2 with type () -> C^.
   |           This type hides capabilities  {any, x}
   |
   |           where:    ^   refers to a root capability in the type of value z2
   |                     any is a root capability created in value z2
-- Error: tests/neg-custom-args/captures/sep-capt1.scala:17:25 ---------------------------------------------------------
17 |  val z1: () => Cap = f1(x) // error
   |                         ^
   |                         Separation failure: Illegal access to {x} which is hidden by the previous definition
   |                         of value z3 with type () ->{x} C^.
   |                         This type hides capabilities  {any, x}
   |
   |                         where:    ^   refers to a root capability in the type of value z3
   |                                   any is a root capability created in value z3
-- Error: tests/neg-custom-args/captures/sep-capt1.scala:20:7 ----------------------------------------------------------
20 |    if x == null then  // error: separation
   |       ^
   |       Separation failure: Illegal access to {x} which is hidden by the previous definition
   |       of value z1 with type () => C^.
   |       This type hides capabilities  {x}
   |
   |       where:    => refers to a root capability in the type of value z1
   |                 ^  refers to a root capability in the type of value z1
-- Error: tests/neg-custom-args/captures/sep-capt1.scala:21:12 ---------------------------------------------------------
21 |      () => x  // error: separation
   |            ^
   |            Separation failure: Illegal access to {x} which is hidden by the previous definition
   |            of value z1 with type () => C^.
   |            This type hides capabilities  {x}
   |
   |            where:    => refers to a root capability in the type of value z1
   |                      ^  refers to a root capability in the type of value z1
-- Error: tests/neg-custom-args/captures/sep-capt1.scala:24:2 ----------------------------------------------------------
24 |  x // error: separation
   |  ^
   |  Separation failure: Illegal access to {x} which is hidden by the previous definition
   |  of value z1 with type () => C^.
   |  This type hides capabilities  {x}
   |
   |  where:    => refers to a root capability in the type of value z1
   |            ^  refers to a root capability in the type of value z1
